samples/_failures_safe/1761792676_3315bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ef18943.c: In function ‘main’:
./samples/SAFE/__tmp_9ef18943.c:176:9: error: ‘f’ undeclared (first use in this function)
  176 |     if (f
      |         ^
./samples/SAFE/__tmp_9ef18943.c:176:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9ef18943.c:176:10: error: expected ‘)’ at end of input
  176 |     if (f
      |        ~ ^
      |          )
./samples/SAFE/__tmp_9ef18943.c:176:5: error: expected declaration or statement at end of input
  176 |     if (f
      |     ^~
